web/wp-content/themes/cncf-theme/source/scss/components/_hero.scss
.hero {
    margin-bottom: $sm-padding;

    @media (min-width: 1200px) {
        margin-bottom: $lg-padding;

    }

    .single & {
        margin-top: $sm-padding;
        margin-bottom: $sm-padding;

        @media (min-width: 1200px) {
            margin-top: $lg-padding;

        }

    }

    &.background-image-wrapper {
        display: flex;
        min-height: 220px;
        justify-content: center;
        align-items: center;

        @media (min-width: 1400px) {
            min-height: 260px;
        }
    }

    .container {
        color: $white;

        .page-template-full-width & {
            max-width: 1250px;

        }
    }

    .background-image-figure:after {
        background-color: $purple-900;
        content: "";
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: 2;
        opacity: 0.80;
        mix-blend-mode: darken;
    }

    .background-image-figure img {
        filter: grayscale(100%);
    }

    h1 {
        margin-top: 0;
        margin-bottom: 0;
    }

    .no-background {
        margin-top: $sm-padding;

        @media (min-width: 1400px) {
            margin-top: $lg-padding;
            margin-bottom: $sm-padding;
        }
    }

    &.alignfull {
        margin-bottom: 4em;
    }
}

// used in post, event, webinars, case study single
.hero-parent-link {
    margin: 0;
    margin-bottom: 0.5em;
    letter-spacing: 2px;
    font-weight: 600;
    font-size: 0.9em;
    text-transform: uppercase;
    text-decoration: none;

    a {
        color: $secondary-color;
    }

    .hero.background-image-wrapper & {
        a {
            color: $white;

            &:hover {
                color: $white;
            }
        }
    }
}

// used in post, event, webinars single
.hero-post-title {
    color: $secondary-color;
    max-width: 900px;
}

